HMIN104-CI/Projet/pp/astParser.java
// Generated from ast.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class astParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, Number=36, Var=37, WS=38;
	public static final int
		RULE_listexpr = 0, RULE_listaffec = 1, RULE_listaffecvar = 2, RULE_listf = 3, 
		RULE_prog = 4, RULE_proc = 5, RULE_inst = 6, RULE_affec = 7, RULE_affecvar = 8, 
		RULE_expr = 9, RULE_fun = 10, RULE_app = 11, RULE_type = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"listexpr", "listaffec", "listaffecvar", "listf", "prog", "proc", "inst", 
			"affec", "affecvar", "expr", "fun", "app", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "':'", "':='", "'if'", "'then'", "'else'", "'['", 
			"']'", "'while'", "'do'", "'skip'", "';'", "'var'", "'false'", "'true'", 
			"'+'", "'-'", "'*'", "'/'", "'and'", "'or'", "'<'", "'<='", "'>'", "'>='", 
			"'='", "'!='", "'not'", "'new array of '", "'read'", "'write'", "'integer'", 
			"'boolean'", "'array of type '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"Number", "Var", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ast.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public astParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ListexprContext extends ParserRuleContext {
		public ArrayList<Expr> l_exp;
		public ExprContext e;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ListexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof astListener ) ((astListener)listener).enterListexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof astListener ) ((astListener)listener).exitListexpr(this);
		}
	}

	public final ListexprContext listexpr() throws RecognitionException {
		ListexprContext _localctx = new ListexprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_listexpr);
		((ListexprContext)_localctx).l_exp = new ArrayList<Expr>();
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(26);
				((ListexprContext)_localctx).e = expr(0);
				_localctx.l_exp.add(((ListexprContext)_localctx).e.e);
				}
				}
				setState(31); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__14) | (1L << T__15) | (1L << T__17) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << Number) | (1L << Var))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaffecContext extends ParserRuleContext {
		public ArrayList<AffecFun> l_affec;
		public AffecContext a;
		public List<AffecContext> affec() {
			return getRuleContexts(AffecContext.class);
		}
		public AffecContext affec(int i) {
			return getRuleContext(AffecContext.class,i);
		}
		public ListaffecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaffec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof astListener ) ((astListener)listener).enterListaffec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof astListener ) ((astListener)listener).exitListaffec(this);
		}
	}

	public final ListaffecContext listaffec() throws RecognitionException {
		ListaffecContext _localctx = new ListaffecContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_listaffec);
		((ListaffecContext)_localctx).l_affec = new ArrayList<AffecFun>();
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(36); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(33);
					((ListaffecContext)_localctx).a = affec();
					_localctx.l_affec.add(((ListaffecContext)_localctx).a.la);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(38); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaffecvarContext extends ParserRuleContext {
		public ArrayList<AffecVar> lva;
		public AffecvarContext a;
		public List<AffecvarContext> affecvar() {
			return getRuleContexts(AffecvarContext.class);
		}
		public AffecvarContext affecvar(int i) {
			return getRuleContext(AffecvarContext.class,i);
		}
		public ListaffecvarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaffecvar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof astListener ) ((astListener)listener).enterListaffecvar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof astListener ) ((astListener)listener).exitListaffecvar(this);
		}
	}

	public final ListaffecvarContext listaffecvar() throws RecognitionException {
		ListaffecvarContext _localctx = new ListaffecvarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_listaffecvar);
		((ListaffecvarContext)_localctx).lva = new ArrayList<AffecVar>();
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(40);
				((ListaffecvarContext)_localctx).a = affecvar();
				_localctx.lva.add(((ListaffecvarContext)_localctx).a.va);
				}
				}
				setState(45); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__13 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListfContext extends ParserRuleContext {
		public ArrayList<Proc> lp;
		public ProcContext a;
		public List<ProcContext> proc() {
			return getRuleContexts(ProcContext.class);
		}
		public ProcContext proc(int i) {
			return getRuleContext(ProcContext.class,i);
		}
		public ListfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof astListener ) ((astListener)listener).enterListf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof astListener ) ((astListener)listener).exitListf(this);
		}
	}

	public final ListfContext listf() throws RecognitionException {
		ListfContext _localctx = new ListfContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_listf);
		((ListfContext)_localctx).lp = new ArrayList<Proc>();
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(50); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(47);
					((ListfContext)_localctx).a = proc();
					_localctx.lp.add(((ListfContext)_localctx).a.prc);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(52); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgContext extends ParserRuleContext {
		public Prog pr;
		public AffecvarContext lv;
		public ListfContext linst;
		public InstContext i;
		public AffecvarContext affecvar() {
			return getRuleContext(AffecvarContext.class,0);
		}
		public ListfContext listf() {
			return getRuleContext(ListfContext.class,0);
		}
		public InstContext inst() {
			return getRuleContext(InstContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof astListener ) ((astListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof astListener ) ((astListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_prog);
		try {
			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				((ProgContext)_localctx).lv = affecvar();
				setState(55);
				((ProgContext)_localctx).linst = listf();
				setState(56);
				((ProgContext)_localctx).i = inst(0);
				 ((ProgContext)_localctx).pr =  new Prog(((ProgContext)_localctx).lv.va, ((ProgContext)_localctx).linst.lp, ((ProgContext)_localctx).i.i);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				((ProgContext)_localctx).linst = listf();
				setState(60);
				((ProgContext)_localctx).i = inst(0);
				 ((ProgContext)_localctx).pr =  new Prog(((ProgContext)_localctx).linst.lp, ((ProgContext)_localctx).i.i);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(63);
				((ProgContext)_localctx).lv = affecvar();
				setState(64);
				((ProgContext)_localctx).i = inst(0);
				((ProgContext)_localctx).pr =  new Prog(((ProgContext)_localctx).lv.va, ((ProgContext)_localctx).i.i);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(67);
				((ProgContext)_localctx).i = inst(0);
				((ProgContext)_localctx).pr = new Prog(((ProgContext)_localctx).i.i);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcContext extends ParserRuleContext {
		public Proc prc;
		public Token v;
		public ListaffecContext la;
		public TypeContext t;
		public ListaffecvarContext af;
		public InstContext i;
		public TerminalNode Var() { return getToken(astParser.Var, 0); }
		public ListaffecContext listaffec() {
			return getRuleContext(ListaffecContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ListaffecvarContext listaffecvar() {
			return getRuleContext(ListaffecvarContext.class,0);
		}
		public InstContext inst() {
			return getRuleContext(InstContext.class,0);
		}
		public ProcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof astListener ) ((astListener)listener).enterProc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof astListener ) ((astListener)listener).exitProc(this);
		}
	}

	public final ProcContext proc() throws RecognitionException {
		ProcContext _localctx = new ProcContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_proc);
		try {
			setState(136);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				((ProcContext)_localctx).v = match(Var);
				setState(73);
				match(T__0);
				setState(74);
				((ProcContext)_localctx).la = listaffec();
				setState(75);
				match(T__1);
				setState(76);
				match(T__2);
				setState(77);
				((ProcContext)_localctx).t = type();
				setState(78);
				((ProcContext)_localctx).af = listaffecvar();
				setState(79);
				((ProcContext)_localctx).i = inst(0);
				((ProcContext)_localctx).prc =  new Proc((((ProcContext)_localctx).v!=null?((ProcContext)_localctx).v.getText():null), ((ProcContext)_localctx).la.l_affec, ((ProcContext)_localctx).t.t, ((ProcContext)_localctx).af.lva, ((ProcContext)_localctx).i.i);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				((ProcContext)_localctx).v = match(Var);
				setState(83);
				match(T__0);
				setState(84);
				match(T__1);
				setState(85);
				match(T__2);
				setState(86);
				((ProcContext)_localctx).t = type();
				setState(87);
				((ProcContext)_localctx).af = listaffecvar();
				setState(88);
				((ProcContext)_localctx).i = inst(0);
				((ProcContext)_localctx).prc =  new Proc((((ProcContext)_localctx).v!=null?((ProcContext)_localctx).v.getText():null)	, ((ProcContext)_localctx).t.t, ((ProcContext)_localctx).af.lva, ((ProcContext)_localctx).i.i);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(91);
				((ProcContext)_localctx).v = match(Var);
				setState(92);
				match(T__0);
				setState(93);
				((ProcContext)_localctx).la = listaffec();
				setState(94);
				match(T__1);
				setState(95);
				((ProcContext)_localctx).af = listaffecvar();
				setState(96);
				((ProcContext)_localctx).i = inst(0);
				((ProcContext)_localctx).prc =  new Proc((((ProcContext)_localctx).v!=null?((ProcContext)_localctx).v.getText():null), ((ProcContext)_localctx).la.l_affec, ((ProcContext)_localctx).af.lva, ((ProcContext)_localctx).i.i);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(99);
				((ProcContext)_localctx).v = match(Var);
				setState(100);
				match(T__0);
				setState(101);
				match(T__1);
				setState(102);
				((ProcContext)_localctx).af = listaffecvar();
				setState(103);
				((ProcContext)_localctx).i = inst(0);
				((ProcContext)_localctx).prc =  new Proc((((ProcContext)_localctx).v!=null?((ProcContext)_localctx).v.getText():null), ((ProcContext)_localctx).af.lva, ((ProcContext)_localctx).i.i);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(106);
				((ProcContext)_localctx).v = match(Var);
				setState(107);
				match(T__0);
				setState(108);
				((ProcContext)_localctx).la = listaffec();
				setState(109);
				match(T__1);
				setState(110);
				match(T__2);
				setState(111);
				((ProcContext)_localctx).t = type();
				setState(112);
				((ProcContext)_localctx).i = inst(0);
				((ProcContext)_localctx).prc =  new Proc((((ProcContext)_localctx).v!=null?((ProcContext)_localctx).v.getText():null), ((ProcContext)_localctx).la.l_affec, ((ProcContext)_localctx).t.t, ((ProcContext)_localctx).i.i);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(115);
				((ProcContext)_localctx).v = match(Var);
				setState(116);
				match(T__0);
				setState(117);
				((ProcContext)_localctx).la = listaffec();
				setState(118);
				match(T__1);
				setState(119);
				((ProcContext)_localctx).i = inst(0);
				((ProcContext)_localctx).prc =  new Proc((((ProcContext)_localctx).v!=null?((ProcContext)_localctx).v.getText():null), ((ProcContext)_localctx).i.i, ((ProcContext)_localctx).la.l_affec);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(122);
				((ProcContext)_localctx).v = match(Var);
				setState(123);
				match(T__0);
				setState(124);
				match(T__1);
				setState(125);
				((ProcContext)_localctx).i = inst(0);
				((ProcContext)_localctx).prc =  new Proc((((ProcContext)_localctx).v!=null?((ProcContext)_localctx).v.getText():null), ((ProcContext)_localctx).i.i);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(128);
				((ProcContext)_localctx).v = match(Var);
				setState(129);
				match(T__0);
				setState(130);
				match(T__1);
				setState(131);
				match(T__2);
				setState(132);
				((ProcContext)_localctx).t = type();
				setState(133);
				((ProcContext)_localctx).i = inst(0);
				((ProcContext)_localctx).prc =  new Proc((((ProcContext)_localctx).v!=null?((ProcContext)_localctx).v.getText():null), ((ProcContext)_localctx).t.t, ((ProcContext)_localctx).i.i);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstContext extends ParserRuleContext {
		public Inst i;
		public InstContext i1;
		public Token v;
		public ExprContext e1;
		public InstContext i2;
		public ExprContext e2;
		public ExprContext e3;
		public TerminalNode Var() { return getToken(astParser.Var, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<InstContext> inst() {
			return getRuleContexts(InstContext.class);
		}
		public InstContext inst(int i) {
			return getRuleContext(InstContext.class,i);
		}
		public FunContext fun() {
			return getRuleContext(FunContext.class,0);
		}
		public InstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inst; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof astListener ) ((astListener)listener).enterInst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof astListener ) ((astListener)listener).exitInst(this);
		}
	}

	public final InstContext inst() throws RecognitionException {
		return inst(0);
	}

	private InstContext inst(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		InstContext _localctx = new InstContext(_ctx, _parentState);
		InstContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_inst, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(139);
				((InstContext)_localctx).v = match(Var);
				setState(140);
				match(T__3);
				setState(141);
				((InstContext)_localctx).e1 = expr(0);
				((InstContext)_localctx).i =  new Affec((((InstContext)_localctx).v!=null?((InstContext)_localctx).v.getText():null), ((InstContext)_localctx).e1.e);
				}
				break;
			case 2:
				{
				setState(144);
				match(T__4);
				setState(145);
				((InstContext)_localctx).e1 = expr(0);
				setState(146);
				match(T__5);
				setState(147);
				((InstContext)_localctx).i1 = inst(0);
				setState(148);
				match(T__6);
				setState(149);
				((InstContext)_localctx).i2 = inst(6);
				((InstContext)_localctx).i =  new IfThenElse(((InstContext)_localctx).e1.e, ((InstContext)_localctx).i1.i, ((InstContext)_localctx).i2.i);
				}
				break;
			case 3:
				{
				setState(152);
				fun();
				}
				break;
			case 4:
				{
				setState(153);
				((InstContext)_localctx).e1 = expr(0);
				setState(154);
				match(T__7);
				setState(155);
				((InstContext)_localctx).e2 = expr(0);
				setState(156);
				match(T__8);
				setState(157);
				match(T__3);
				setState(158);
				((InstContext)_localctx).e3 = expr(0);
				((InstContext)_localctx).i =  new AffecArray(((InstContext)_localctx).e1.e, ((InstContext)_localctx).e2.e, ((InstContext)_localctx).e3.e);
				}
				break;
			case 5:
				{
				setState(161);
				match(T__9);
				setState(162);
				((InstContext)_localctx).e1 = expr(0);
				setState(163);
				match(T__10);
				setState(164);
				((InstContext)_localctx).i1 = inst(3);
				((InstContext)_localctx).i =  new DoWhile(((InstContext)_localctx).e1.e, ((InstContext)_localctx).i1.i);
				}
				break;
			case 6:
				{
				setState(167);
				match(T__11);
				((InstContext)_localctx).i =  new Skip();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(178);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new InstContext(_parentctx, _parentState);
					_localctx.i1 = _prevctx;
					_localctx.i1 = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_inst);
					setState(171);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(172);
					match(T__12);
					setState(173);
					((InstContext)_localctx).i2 = inst(2);
					((InstContext)_localctx).i =  new SequenceInst(((InstContext)_localctx).i1.i, ((InstContext)_localctx).i2.i);
					}
					} 
				}
				setState(180);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class AffecContext extends ParserRuleContext {
		public AffecFun la;
		public Token v;
		public TypeContext t;
		public TerminalNode Var() { return getToken(astParser.Var, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public AffecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_affec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof astListener ) ((astListener)listener).enterAffec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof astListener ) ((astListener)listener).exitAffec(this);
		}
	}

	public final AffecContext affec() throws RecognitionException {
		AffecContext _localctx = new AffecContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_affec);
		try {
			setState(193);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(181);
				match(T__0);
				setState(182);
				((AffecContext)_localctx).v = match(Var);
				setState(183);
				match(T__2);
				setState(184);
				((AffecContext)_localctx).t = type();
				setState(185);
				match(T__1);
				((AffecContext)_localctx).la =  new AffecFun((((AffecContext)_localctx).v!=null?((AffecContext)_localctx).v.getText():null), ((AffecContext)_localctx).t.t);
				}
				break;
			case Var:
				enterOuterAlt(_localctx, 2);
				{
				setState(188);
				((AffecContext)_localctx).v = match(Var);
				setState(189);
				match(T__2);
				setState(190);
				((AffecContext)_localctx).t = type();
				((AffecContext)_localctx).la =  new AffecFun((((AffecContext)_localctx).v!=null?((AffecContext)_localctx).v.getText():null), ((AffecContext)_localctx).t.t);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AffecvarContext extends ParserRuleContext {
		public AffecVar va;
		public ListaffecContext al;
		public ListaffecContext listaffec() {
			return getRuleContext(ListaffecContext.class,0);
		}
		public AffecvarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_affecvar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof astListener ) ((astListener)listener).enterAffecvar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof astListener ) ((astListener)listener).exitAffecvar(this);
		}
	}
